--- a/latex_scripts/two_axis_example.tex
+++ b/latex_scripts/two_axis_example.tex
@@ -6,13 +6,14 @@
 	\smash[b]{\begin{tabular}[t]{@{}c@{}} #1 \end{tabular}}}
 \begin{document}
 \noindent
-\begin{tabular}{@{} *{4}{c} @{}}
-\headercell{Trained \\ With} & \multicolumn{3}{c@{}}{Relative Performance On}\\
-\cmidrule(l){2-4}
- & HTN & DM & OP \\ 
+\begin{tabular}{@{} *{5}{c} @{}}
+\headercell{Trained \\ With} & \multicolumn{4}{c@{}}{Relative Performance On}\\
+\cmidrule(l){2-5}
+ & HTN & DM & OP & average \\ 
  \midrule
-	HTN& \cellcolor{green!60.0} 0.6& \cellcolor{red!20.0} -0.2& \cellcolor{green!10.0} 0.1\\
-	DM& \cellcolor{green!40.0} 0.4& \cellcolor{red!50.0} -0.5& \cellcolor{red!90.0} -0.9\\
-	OP& \cellcolor{green!60.0} 0.6& \cellcolor{green!90.0} 0.9& \cellcolor{red!20.0} -0.2\\
+	HTN& \cellcolor{green!60.0} 0.60& \cellcolor{red!20.0} -0.20& \cellcolor{green!10.0} 0.10& \cellcolor{green!16.666666666666664} 0.17\\
+	DM& \cellcolor{green!40.0} 0.40& \cellcolor{red!50.0} -0.50& \cellcolor{red!90.0} -0.90& \cellcolor{red!33.33333333333333} -0.33\\
+	OP& \cellcolor{green!60.0} 0.60& \cellcolor{green!90.0} 0.90& \cellcolor{red!20.0} -0.20& \cellcolor{green!43.333333333333336} 0.43\\
+	average& \cellcolor{green!53.333333333333336} 0.53& \cellcolor{green!6.66666666666667} 0.07& \cellcolor{red!33.33333333333333} -0.33 & -
 \end{tabular}
 \end{document}
